docs: Update 03-operatro.md